# discord-bot-maker-android

./: .gitignore  ARCHITECTURE.md  AutoModScreen.kt  BotCreationScreen.kt  CONTRIBUTING.md  COORDINATION.md  CommandBuilderScreen.kt  DEVELOPER.md  LiveConsoleScreen.kt  MusicPlayerScreen.kt  PLUGIN_STACK.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  after-token.xml  app-ui.xml  backend_api.py  build.gradle.kts  create-ui.xml  gradle.properties  home-ui.xml  resumen_proyecto_bot.md  settings.gradle.kts  test_backend_api.py  test_discord_theme.py  test_doubt_assistant.py  test_origin_loading.py  test_pr4_fixes.py  test_stats_dashboard.py  test_tree_view.py  tmp-app-drawer.xml  ui-dump.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
backend/: backend_api.py  pyproject.toml  pytest.ini
backend/app/: logging.py  main.py  models.py  runtime.py  security.py  storage.py
backend/tests/: test_api.py
design/: OFFICIAL_BRANDING.md  OFFICIAL_MOCKUP.md  branding.md  perspectives.md  resumen_proyecto_bot.md  visual-tree.md
discord-5iv-ai-team/: .env.example  README.md  package-lock.json  package.json
discord-5iv-ai-team/src/: adminPlanner.js  agents.js  config.js  discordAdmin.js  gemini.js  index.js  session.js  (+1 more)
ui/: AppNavigation.kt  AppTheme.kt  BillingScreen.kt  DoubtAssistantScreen.kt  MainDashboardScreen.kt  NeonTheme.kt  OriginLoadingScreen.kt  OrionBubble.kt  SplashScreen.kt  StatsDashboardScreen.kt  ToolLibraryScreen.kt
(+39 files in other folders)
